--- a/MOBILE/html/new/orderDeliveryDetail2.html
+++ b/MOBILE/html/new/orderDeliveryDetail2.html
@@ -27,7 +27,8 @@
 </head>
 <body>
 
-<div id="wrap" class="content_new">
+<!-- 210129 S : 작업부분 id="wrap" class="orderandpay positionTop" 넣어주세요-->
+<div id="wrap" class="content_new orderandpay positionTop">
   <!-- #header -->
   <div id="header">
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
