--- a/MOBILE/html/new/reviewForm.html
+++ b/MOBILE/html/new/reviewForm.html
@@ -27,7 +27,8 @@
 </head>
 <body>
 
-<div id="wrap" class="mini">
+<!-- 210129 S : 작업부분 id="wrap" class="orderandpay positionTop" 넣어주세요-->
+<div id="wrap" class="content_new orderandpay positionTop">
   <!-- #header -->
   <div id="header">
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
@@ -44,7 +45,7 @@
 <div id="content">
         
 <!-- content -->
-<div id="sc_content" style="margin-top: -10px;">
+<div id="sc_content">
 <!-- tit_section -->
 <div id="sc_header">
     <h1>상품평 수정하기</h1>
