--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1226,8 +1226,8 @@ th.row-headers-background {
       <tr style="height:29px;">
         <th id="587364640R52" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">53</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s15" dir="ltr" rowspan="35">마이핫트랙스</td>
-        <td class="s16"  rowspan="35">마이핫트랙스</td>
+        <td class="s15" dir="ltr" rowspan="36">마이핫트랙스</td>
+        <td class="s16"  rowspan="36">마이핫트랙스</td>
         <td class="s16">메인페이지</td>
         <td class="s9"></td>
         <td class="s16"></td>
@@ -1287,7 +1287,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit.html">./html/new/deposit.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit_blank.html">./html/new/deposit_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1309,7 +1309,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit2.html">./html/new/deposit2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit2_blank.html">./html/new/deposit2_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1338,7 +1338,7 @@ th.row-headers-background {
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s16">쿠폰</td>
+        <td class="s16">쿠폰 - 온라인쿠폰 </td>
         <td class="s16">내역있음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
@@ -1349,11 +1349,33 @@ th.row-headers-background {
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s16">쿠폰</td>
+        <td class="s16">쿠폰 - 온라인쿠폰</td>
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon_blank.html">./html/new/coupon_blank.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+        <tr style="height:29px;">
+        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">쿠폰 - 영업점쿠폰</td>
+        <td class="s16">내역있음</td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon2.html">./html/new/coupon2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+        <tr style="height:29px;">
+        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">쿠폰 - 영업점쿠폰</td>
+        <td class="s16">내역없음</td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon2_blank.html">./html/new/coupon2_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1367,7 +1389,7 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listReceipt.html">./html/new/listReceipt.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr><!-- 
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1378,7 +1400,7 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1386,7 +1408,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listReceipt_blank.html">./html/new/listReceipt_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1474,7 +1496,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_product.html">./html/new/list_wish_product.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1485,7 +1507,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_brand.html">./html/new/list_wish_brand.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1496,7 +1518,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_like.html">./html/new/list_wish_like.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
