--- a/PC/html/new/listWishBrand.html
+++ b/PC/html/new/listWishBrand.html
@@ -321,13 +321,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="pd_list">
                             <ul>
                                 <!-- 대체상품 sold_out-t : class 추가 -->
-                                <li class="sold_out-t">
+                                <li class="">
                                     <div class="choice_wrap type_squre">
                                         <input type="checkbox" name="chk" id="orderInfo_21" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_21">
+                                        <label class="choice_like_thing" for="orderInfo_21"></label>
+                                        <a href="#none">
                                             <div>
                                                 <div class="thum">
-                                                    <!-- <img src="../../images/biz/thums/main_slide01.png" alt=""> -->
+                                                    <img src="../../images/biz/thums/main_slide01.png" alt="">
                                                     <div class="soldout-wrap">
                                                         <div class="absol-center">
                                                             <p>아쉽지만!</p>
@@ -338,16 +339,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="brand">wearinggeul</p>
-                                                    <a href="#n" class="btn_type05_v2 small mgt20">삭제</a>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="choice_wrap type_squre">
                                         <input type="checkbox" name="chk" id="orderInfo_26" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_26">
+                                        <label class="choice_like_thing" for="orderInfo_26"></label>
+                                        <a href="#none">
                                             <div>
                                                 <div class="thum">
                                                     <img src="../../images/biz/thums/main_slide01.png" alt="">
@@ -361,16 +363,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="brand">wearinggeul</p>
-                                                    <a href="#n" class="btn_type05_v2 small mgt20">삭제</a>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="choice_wrap type_squre">
-                                        <input type="checkbox" name="chk" id="orderInfo_267" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_267">
+                                        <input type="checkbox" name="chk" id="orderInfo_29" value="Y">
+                                        <label class="choice_like_thing" for="orderInfo_29"></label>
+                                        <a href="#none">
                                             <div>
                                                 <div class="thum">
                                                     <img src="../../images/biz/thums/main_slide01.png" alt="">
@@ -384,10 +387,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="brand">wearinggeul</p>
-                                                    <a href="#n" class="btn_type05_v2 small mgt20">삭제</a>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                             </ul>
