--- a/PC/html/new/listWishGood.html
+++ b/PC/html/new/listWishGood.html
@@ -323,7 +323,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <li>
                                     <div class="choice_wrap type_squre">
                                         <input type="checkbox" name="chk" id="orderInfo_21" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_21">
+                                        <label class="choice_like_thing" for="orderInfo_21"></label>
+                                        <a href="#none" class="link"> 
                                             <div>
                                                 <div class="thum">
                                                     <img src="../../images/biz/thums/main_slide01.png" alt="">
@@ -337,16 +338,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="tit bold mgb0">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-                                                    <p class="brand mgt10 elip2 width100">#두근두근 #충전완료 #개취존중</p>
+                                                    <p class="brand mgt10 width100">#두근두근 #충전완료 #개취존중</p>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="choice_wrap type_squre">
                                         <input type="checkbox" name="chk" id="orderInfo_26" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_26">
+                                        <label class="choice_like_thing" for="orderInfo_26"></label>
+                                        <a href="#none" class="link"> 
                                             <div>
                                                 <div class="thum">
                                                     <img src="../../images/biz/thums/main_slide01.png" alt="">
@@ -360,16 +363,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="tit bold mgb0">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-                                                    <p class="brand mgt10 elip2 width100">wearinggeul</p>
+                                                    <p class="brand mgt10 width100">#두근두근 #충전완료 #개취존중</p>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="choice_wrap type_squre">
-                                        <input type="checkbox" name="chk" id="orderInfo_267" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_267">
+                                        <input type="checkbox" name="chk" id="orderInfo_27" value="Y">
+                                        <label class="choice_like_thing" for="orderInfo_27"></label>
+                                        <a href="#none" class="link"> 
                                             <div>
                                                 <div class="thum">
                                                     <img src="../../images/biz/thums/main_slide01.png" alt="">
@@ -383,10 +388,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="tit bold mgb0">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-                                                    <p class="brand mgt10 elip2 width100">#두근두근 #충전완료 #개취존중 #두근두근 #충전완료 #개취존중#두근두근 #충전완료 #개취존중#두근두근 #충전완료 #개취존중</p>
+                                                    <p class="brand mgt10 width100">#두근두근 #충전완료 #개취존중</p>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                             </ul>
