--- a/PC/html/new/listWish_blank.html
+++ b/PC/html/new/listWish_blank.html
@@ -303,6 +303,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="at_this_time_like_wrap">
                         <div class="blank_text_wrap">
                             <p>좋아요한 브랜드가 없습니다.</p> 
+                               <p class="tt">일치되는 검색결과를 찾을 수 없습니다.</p> 
                         </div>
                     </div>                  
                 </div>
