--- a/PC/html/new/mypageMain_this.html
+++ b/PC/html/new/mypageMain_this.html
@@ -447,7 +447,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </a>
                                 </li>
                             </ul>
-                            <ul class="membership_list col3 mgt8">
+                            <!-- <ul class="membership_list col3 mgt8">
                                 <li class="items other">
                                     <a href="javascript:;" class="link">
                                         <div class="text_wrap">
@@ -537,7 +537,206 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <a href="javascript:;" class="unit_go_consulting mgt10 ">상담내역 바로가기</a>
                                     </div>                                    
                                 </li>
-                            </ul>
+                            </ul> -->
+                        </div>
+                        <div class="mypage_main_bottom_wrap mgt80">
+                            <div class="mypage_wish_list">
+                                <div class="mypage_wish_list_title">
+                                    <h3 class="page_title fz22 mgt0 border">좋아요</h2>
+                                    <p class="position_right">내가 좋아요 한 상품/브랜드/이럴 때, 좋아요를 확인하세요</p>
+                                </div>
+                                <div class="my_list_section">
+                                    <h3 class="tit01 fz mgt30">좋아요♥ 상품(<span class="only_english">99</span>건)</h3>
+                                    <div class="zzim-list mgt10">
+                                        <ul>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <a href="#n" class="btn_more type2" title="좋아요♥ 상품 더보기">더보기 +</a>
+                                </div>
+
+                                <div class="my_list_section mgt80">
+                                    <h3 class="tit01 fz mgt30">좋아요♥ 브랜드(<span class="only_english">99</span>건)</h3>
+                                    <div class="zzim-list mgt10">
+                                        <ul>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <a href="#n" class="btn_more type2" title="좋아요♥ 상품 더보기">더보기 +</a>
+                                </div> 
+
+                                <div class="my_list_section mgt80">
+                                    <h3 class="tit01 fz mgt30">이럴 때, 좋아요♥(<span class="only_english">99</span>건)</h3>
+                                    <div class="zzim-list mgt10">
+                                        <ul>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                            <li class="items">
+                                                <a class="t_center link" href="#n" title="[더 킹 [얼티밋 컬렉터스 박스 한정판]] 상세페이지 새창에서 열림">
+                                                    <img src="../../images/new/@imga.png" alt="더 킹 [얼티밋 컬렉터스 박스 한정판]">
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <a href="#n" class="btn_more type2" title="좋아요♥ 상품 더보기">더보기 +</a>
+                                </div>
+
+                                <div class="my_list_section mgt80">
+                                    <h3 class="tit01 fz mgt30">내 상품평</h3>
+                                    <table class="bbs_list_v2 space_pad border mgt20">
+                                        <caption>내 상품평 <span>작성일자, 상품, 내용, 만족도</span></caption>
+                                        <colgroup>
+                                            <col style="width:120px">
+                                            <col style="width:120px">
+                                            <col style="width:*">
+                                            <col style="width:80px">
+                                        </colgroup>
+                                        <thead>
+                                            <tr>
+                                                <th scope="col" class="fir">작성일자</th>
+                                                <th scope="col">상품</th>
+                                                <th scope="col">내용</th>
+                                                <th scope="col" class="last">만족도</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="qnaTbody">
+                                            <tr>
+                                                <td class="only_english">2019.09.03</td>
+                                                <td>
+                                                    <a href="#n"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/50/1540/hot1561081114019.jpg" alt="[2+1] [카멜] 전자노트 카멜보드 10인치 CB1010" width="50" height="50" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';"></a>
+                                                </td>
+                                                <td>
+                                                    <div class="elip">로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님
+                                                    </div>
+                                                </td>
+                                                <td>접수</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <a href="#n" class="btn_more type2" title="좋아요♥ 상품 더보기">더보기 +</a>
+                                </div>
+
+                                <div class="my_list_section mgt80">
+                                    <h3 class="tit01 fz mgt30">상품 Q&amp;A</h3>
+                                    <table class="bbs_list_v2 space_pad border mgt20">
+                                        <caption>상품 Q&amp;A<span>작성일자, 상품, 내용, 만족도</span></caption>
+                                        <colgroup>
+                                            <col style="width:120px">
+                                            <col style="width:120px">
+                                            <col style="width:*">
+                                            <col style="width:80px">
+                                        </colgroup>
+                                        <thead>
+                                            <tr>
+                                                <th scope="col" class="fir">작성일자</th>
+                                                <th scope="col">상품</th>
+                                                <th scope="col">내용</th>
+                                                <th scope="col" class="last">만족도</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="qnaTbody">
+                                            <tr>
+                                                <td class="only_english">2019.09.03</td>
+                                                <td>
+                                                    <a href="#n"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/50/1540/hot1561081114019.jpg" alt="[2+1] [카멜] 전자노트 카멜보드 10인치 CB1010" width="50" height="50" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';"></a>
+                                                </td>
+                                                <td>
+                                                    <div class="elip">로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님
+                                                    </div>
+                                                </td>
+                                                <td>접수</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <a href="#n" class="btn_more type2" title="좋아요♥ 상품 더보기">더보기 +</a>
+                                </div>
+
+                                <div class="my_list_section mgt80">
+                                    <h3 class="tit01 fz mgt30">SOS 상담</h3>
+                                    <table class="bbs_list_v2 space_pad border mgt20">
+                                        <caption>SOS 상담<span>작성일자, 상품구분, 내용, 답변여부</span></caption>
+                                        <colgroup>
+                                            <col style="width:120px">
+                                            <col style="width:120px">
+                                            <col style="width:*">
+                                            <col style="width:80px">
+                                        </colgroup>
+                                        <thead>
+                                            <tr>
+                                                <th scope="col" class="fir">작성일자</th>
+                                                <th scope="col">상품구분</th>
+                                                <th scope="col">내용</th>
+                                                <th scope="col" class="last">답변여부</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="qnaTbody">
+                                            <tr>
+                                                <td class="only_english">2019.09.03</td>
+                                                <td>
+                                                    주문취소/변경
+                                                </td>
+                                                <td>
+                                                    <div class="elip">로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님로이텀 미디엄 노트 뮤트 데님
+                                                    </div>
+                                                </td>
+                                                <td>YES</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <a href="#n" class="btn_more type2" title="좋아요♥ 상품 더보기">더보기 +</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
