--- a/MOBILE/html/new/totsaved.html
+++ b/MOBILE/html/new/totsaved.html
@@ -29,7 +29,7 @@
 
 <!-- 210129 S : 작업부분 id="wrap" class="orderandpay positionTop" 넣어주세요-->
 <div id="wrap" class="content_new orderandpay positionTop">
-<!-- <div id="wrap" class="mini content_new orderandpay"> -->
+<!-- <div id="wrap" class="mini content_new"> -->
   <!-- #header -->
   <div id="header">
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
@@ -48,10 +48,12 @@
     <div class="">
         <div id="my_content">
             <div class="my_smenu4">
-                <a href="/m/mypage/totsaved" class="btn_totsaved active">통합 <br>포인트</a>
-                <a href="/m/mypage/deposit" class="btn_deposit">예치금</a>
-                <a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a>
-                <a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a>
+              <ul>
+                <li><a href="/m/mypage/totsaved" class="btn_totsaved active">통합 <br>포인트</a></li>
+                <li><a href="/m/mypage/deposit" class="btn_deposit">예치금</a></li>
+                <li><a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a></li>
+                <li><a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a></li>
+              </ul>
             </div>
             <!-- <p class="info t_c">
               <p class="f20 t_c">고객님의 통합포인트는 <span class="col_orange"><strong>0</strong></span>원 입니다.</p>
@@ -61,7 +63,7 @@
               <p class="t_c">고객님의 통합포인트는 <span class="color_01"><strong class="only_english">0</strong></span>원 입니다.</p>
               <p class="f12 col_grey mt10">(구)마일리지를 소지하신 고객님께서는 교보문고에서 확인가능합니다.</p>
             </div>
-            <div class="box_flex tog_area space_pad mt20">
+            <div class="box_flex tog_area space_pad distance">
                 <a href="javascript:location.replace('/m/mypage/totsaved?srchMaxDate=3&srchGbn=1')" class="btn tog_btn active">3개월</a>
                 <a href="javascript:location.replace('/m/mypage/totsaved?srchMaxDate=6&srchGbn=1')" class="btn tog_btn">6개월</a>
                 <a href="javascript:location.replace('/m/mypage/totsaved?srchMaxDate=12&srchGbn=1')" class="btn tog_btn">12개월</a>
@@ -72,6 +74,15 @@
                 </select>
             </div>
             <div id="orderList" class="mt30">
+                <ul class="br_list mb30">
+                    <li class="line bg_eeeeee">
+                        <strong class="fl_l only_english bold">2019.10.26</strong>
+                    </li>
+                    <li>
+                        <strong class="fl_l only_english">상품후기 적립</strong>
+                        <strong class="fl_r"><span class="only_english color_01">200 P</span></strong>
+                    </li>
+                </ul>
                 <ul class="br_list mb30">
                     <li class="line bg_eeeeee">
                         <strong class="fl_l only_english bold">2019.10.26</strong>
