--- a/PC/html/new/listWishProduct.html
+++ b/PC/html/new/listWishProduct.html
@@ -324,7 +324,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <li class="sold_out-t">
                                     <div class="choice_wrap type_squre">
                                         <input type="checkbox" name="chk" id="orderInfo_21" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_21">
+                                        <label class="choice_like_thing" for="orderInfo_21"></label>
+                                        <a href="#none" class="link">
                                             <div>
                                                 <div class="thum">
                                                     <!-- <img src="../../images/biz/thums/main_slide01.png" alt=""> -->
@@ -338,21 +339,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="brand">wearinggeul</p>
-                                                    <p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+                                                    <p class="tit mgt20">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
                                                     <p class="price font_t">
                                                         <span class="percent">20%</span>
                                                         <span>999,999</span>
                                                         <span class="discount">999,999</span>
                                                     </p>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="choice_wrap type_squre">
-                                        <input type="checkbox" name="chk" id="orderInfo_26" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_26">
+                                        <input type="checkbox" name="chk" id="orderInfo_25" value="Y">
+                                        <label class="choice_like_thing" for="orderInfo_25"></label>
+                                        <a href="#none" class="link">
                                             <div>
                                                 <div class="thum">
                                                     <img src="../../images/biz/thums/main_slide01.png" alt="">
@@ -366,21 +369,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="brand">wearinggeul</p>
-                                                    <p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+                                                    <p class="tit mgt20">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
                                                     <p class="price font_t">
                                                         <span class="percent">20%</span>
                                                         <span>999,999</span>
                                                         <span class="discount">999,999</span>
                                                     </p>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="choice_wrap type_squre">
-                                        <input type="checkbox" name="chk" id="orderInfo_267" value="Y">
-                                        <label class="choice_like_thing" for="orderInfo_267">
+                                        <input type="checkbox" name="chk" id="orderInfo_29" value="Y">
+                                        <label class="choice_like_thing" for="orderInfo_29"></label>
+                                        <a href="#none" class="link">
                                             <div>
                                                 <div class="thum">
                                                     <img src="../../images/biz/thums/main_slide01.png" alt="">
@@ -394,15 +399,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                                  <div class="cont">
                                                     <p class="brand">wearinggeul</p>
-                                                    <p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+                                                    <p class="tit mgt20">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
                                                     <p class="price font_t">
                                                         <span class="percent">20%</span>
                                                         <span>999,999</span>
                                                         <span class="discount">999,999</span>
                                                     </p>
+                                                    <a href="#n" class="trash_delete">삭제</a>
                                                 </div>
                                             </div>
-                                        </label>
+                                        </a>
                                     </div>
                                 </li>
                             </ul>
